# rinha-de-backend-2025

./: .env  .gitignore  Cargo.toml  README.md  data.txt  docker-compose.yml  haproxy.cfg  nginx.001.conf  nginx.conf
balancer/: Cargo.toml  Dockerfile
balancer/src/: main.rs  robin.rs
config/: haproxy.cfg  nginx.conf
database/: Cargo.toml  Dockerfile
database/src/: controller.rs  entity.rs  main-axum.txt  main.rs
fire/: Cargo.toml  Dockerfile
fire/src/: main.rs
gateway/: Cargo.toml  Dockerfile
gateway-async/: Cargo.toml  Dockerfile
gateway-async/src/: client.rs  main.rs  models.rs  repository.rs  service.rs  utils.rs
gateway-sync/: Cargo.toml  Dockerfile
gateway-sync/src/: client.rs  controller.rs  main.rs  service.rs  utils.rs
gateway/src/: client.rs  controller.rs  entity.rs  main.rs  models.rs  repository.rs  service.rs  utils.rs  vars.rs
queue/: Cargo.toml  Dockerfile
queue/src/: main.rs
resources/: partial-results.json  traefik-compose.yml
resources/tests/: partial-results.json  rinha.js
submission/: docker-compose.yml
umbral-socket/: Cargo.toml
umbral-socket/src/: lib.rs
worker/: Cargo.toml  Dockerfile
worker/src/: client.rs  controller.rs  entity.rs  main.rs  repository.rs  service.rs  vars.rs
