[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = "1.46.1"
bytes = "1.10.1"
mimalloc = "0.1.47"
serde_json = "1.0.141"
umbral-socket = "0.2.9"
crossbeam-queue = "0.3.12"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }

[profile.release]
lto = true
panic = "abort"
strip = "debuginfo"
codegen-units = 1
