[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = "1.46.1"
mimalloc = "0.1.47"
actix-web = "4.11.0"
async-channel = "2.5.0"
crossbeam-queue = "0.3.12"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["json"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
umbral-socket = "0.1.2"
