[package]
name = "umbral-socket"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = "1.46.1"
hyper = { version = "1.6.0", features = ["client", "http1"] }
hyperlocal = "0.9.1"
hyper-util = { version = "0.1.16", features = [
    "client",
    "client-legacy",
    "tokio",
] }
http-body-util = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
